# MSCS-532-M20

./: README.md
weeks-3-4/assignment-2/: README.md  main.py  pyproject.toml
weeks-3-4/assignment-2/outputs/: results_random.csv  results_reverse.csv  results_sorted.csv
weeks-3-4/assignment-2/sorting_algorithms/: merge_sort_algorithm.py  quick_sort_algorithm.py
weeks-3-4/assignment-2/utils/: metrics_utils.py  plot_utils.py
