[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "assignment-2"
version = "0.1.0"
description = "Implementation and performance comparison of Merge Sort and Quick Sort."
readme = "README.md"
urls = {homepage = "https://github.com/aashishshrestha09/MSCS-532-M20"}
dependencies = [
    "matplotlib==3.10.0",
]

[project.optional-dependencies]
dev = [
  "black==24.3.0",
  "pyflakes==3.2.0",
]
